--- a/sass/components/_backdrop.scss
+++ b/sass/components/_backdrop.scss
@@ -6,7 +6,10 @@
   width: 100%;
   height: 100%;
 
-  background: rgba(0, 0, 0, 0.2);
+ background: rgba(0, 0, 0, 0.2);
+
+ padding: 93px 15px;
+ overflow-y: scroll;
 
   opacity: 1;
   visibility: visible;
