--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -1,6 +1,29 @@
 
 .container {
+position: relative;
+
+  padding: 0 15px;
+  margin-left: auto;
+  margin-right: auto;
+  
+
+  @media screen and (min-width: 480px) {
+  width: 480px ;
+  padding: 0 15px;
+  margin-left: auto;
+  margin-right: auto;
+  }
+
+  @media screen and (min-width: 768px) {
+  width: 768px ;
+  padding: 0 15px;
+  margin: auto auto;
+  }
+
+  @media screen and (min-width: 1200px) {
   width: 1200px ;
   padding: 0 15px;
   margin: auto auto;
+  }
 }
+
