--- a/sass/components/_footer-form.scss
+++ b/sass/components/_footer-form.scss
@@ -1,13 +1,14 @@
 
 .form-footer {
-  @include flex-settings(flex, flex-start, flex-end);
+//   @include flex-settings(flex, flex-start, flex-end);
   
   &__title {
         font-weight: $f-weight-bolt;
         font-size: 14px;
         line-height: 1.14;
+        
 
-        margin-right: 12px;
+        // margin-right: 12px;
 
         text-transform: uppercase;
         color: #ffffff;
@@ -16,10 +17,13 @@
     &__input {
         @include flex-settings(flex, flex-start, center);
 
-        width: 358px;
-        padding: 15px;
+        width: 100%;
 
-        margin-top: 20px;
+        // width: 358px;
+        padding: 15px;
+        margin-top: 20px; 
+        margin-bottom: 20px; 
+        
         font-size: 16px;
         line-height: 1.25;
 
