--- a/sass/components/_modal-form.scss
+++ b/sass/components/_modal-form.scss
@@ -4,12 +4,17 @@
   &__text {
     font-weight: $f-weight-bolt;
     font-size: 20px;
-    line-height: 1.15;
+    line-height: 1.5;
     text-align: center;
 
     margin-bottom: 12px;
 
     color: $title-text-color;
+
+    @media screen and (min-width: 1200px) {
+    line-height: 1.15;
+    }
+
   }
 
   &__field {
@@ -82,6 +87,11 @@
   margin-bottom: 30px;
 
   &__lable {
+font-size: 12px;
+line-height: 1.17;
+
+
+
     position: relative;
 
     @include flex-settings(flex, center, center);
@@ -123,6 +133,17 @@
   }
 
   &__link {
+    
+    @media screen and (max-width: 1199px) {
+        font-size: 12px;
+        line-height: 1.17;
+    }
+
+    @media screen and (min-width: 1200px) {
+        font-size: 14px;
+        line-height: 1.71;
+    }
+
     text-decoration: underline;
     color: $аccent-color;
   }
