--- a/sass/components/_port-btn-list.scss
+++ b/sass/components/_port-btn-list.scss
@@ -3,15 +3,35 @@
 }
 
 .button-list {
-  @include flex-settings(flex, center, center);
 
-  margin-bottom: 34px;
-  padding: 0;
+@media screen and (max-width: 767px) {
+    @include flex-settings(flex, flex-start, center);
+    flex-wrap: wrap;
+}
+@media screen and (min-width: 768px) {
+    @include flex-settings(flex, center, center);
 
-  &__item:not(:last-child) {
+}
+  
+@media screen and (max-width: 1199px) {
+  margin-bottom: 40px;
+}
+@media screen and (min-width: 1200px) {
+    margin-bottom: 34px;
+}
+
+
+
+  &__item {
+    margin: 0 8px 15px 0;
+  }
+@media screen and (min-width: 1200px) {
+    &__item:not(:last-child) {
     margin-right: 8px;
   }
 
+}
+ 
   &__button {
     font-family: inherit;
     
