--- a/sass/components/_port-card-set.scss
+++ b/sass/components/_port-card-set.scss
@@ -1,19 +1,46 @@
 
 .card-set {
-  display: flex;
-  flex-wrap: wrap;
-  padding: 0;
-
+    @media screen and (min-width: 768px) {
+        display: flex;
+        flex-wrap: wrap;
+    }
+    @media screen and (min-width: 768px) and (max-width: 1199px) {
+        flex-basis: calc((100% - 2*15px) / 2);
+        display: flex;
+        flex-wrap: wrap;
+        margin: -15px;
+    }
+  
     &__item {
-        margin-right: 30px;
-        margin-bottom: 30px;
-    
-            &:nth-last-child(-n + 3) {
-                margin-bottom: 0;
+        @media screen and (max-width: 767px) {
+            display: block;
+            
+            &:not(:last-child) {
+                margin-bottom: 30px;
             }
-            &:nth-child(3n) {
-                margin-right: 0;
+        }
+        @media screen and (min-width: 768px) and (max-width: 1199px) {
+            &:nth-child(1) .product__thumb{
+                padding: 20px 24px 56px 24px;
             }
+        }
+        
+        @media screen and (min-width: 768px) and (max-width: 1199px) {
+            margin: 15px;
+        }
     }
 
+
+
+        // margin-right: 30px;
+        // margin-bottom: 30px;
+    
+        //     &:nth-last-child(-n + 3) {
+        //         margin-bottom: 0;
+        //     }
+        //     &:nth-child(3n) {
+        //         margin-right: 0;
+        //     }
 }
+
+
