--- a/sass/components/_port-card.scss
+++ b/sass/components/_port-card.scss
@@ -1,8 +1,16 @@
 .product {
   display: block;
 
-  transition: box-shadow $transition-duration $timing-function;
+        @media  screen and (max-width: 767px ) {
+           width: 100%;
+        }
+        
+        @media  screen and (min-width: 768px ) and (max-width: 1199px) {
+            width: 354px;
+        }
 
+  transition: box-shadow $transition-duration $timing-function;
+    
     &:hover,
     &:focus {
         box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
@@ -45,6 +53,7 @@
     }
 
     &__thumb {
+        
         padding: 20px 24px;
         background-color: #ffffff;
         border-bottom: 1px solid #eeeeee;
@@ -70,5 +79,12 @@
 
     &__img {
         display: flex;
+        @media  screen and (max-width: 767px ) {
+           width: 100%;
+        }
+        @media  screen and (min-width: 768px ) and (max-width: 1199px) {
+            width: 354px;
+        }
+        
     }
 }
