--- a/sass/layout/_advantages-section.scss
+++ b/sass/layout/_advantages-section.scss
@@ -3,27 +3,51 @@
      @extend %section;
 }
 .advantages-list {
+     @media screen and (min-width: 768px) and (max-width: 1199px) {
+        flex-basis: calc((100% - 2*15px) / 2);
         display: flex;
-      
+        flex-wrap: wrap;
+        margin: -15px;
+    }
+    @media screen and (min-width: 1200px) {
+        display: flex;
+    }
+        
     &__item {
-    width: 270px;
-        &:not(:last-child) {
-            margin-right: 30px;
+        @media screen and (max-width: 767px) {
+            width: 100%;
+                &:not(:last-child) {
+                    margin-bottom: 30px;
+                }
+        }
+        @media screen and (min-width: 768px) and (max-width: 1199px) {
+            width: 354px;
+            margin: 15px;
+        }
+        @media screen and (min-width: 1200px) {
+           margin-right: 30px;
         }
     }
+
     &__block {
         @include flex-settings(flex, center, center);
 
-    height: 120px;
-    margin-bottom: 30px;
-    border-radius: 4px;
-    background-color: #f5f4fa;
+            height: 120px;
+            margin-bottom: 30px;
+            border-radius: 4px;
+            background-color: #f5f4fa;
+        
+        @media screen and (min-width: 1200px) {
+            width: 270px;
+        }
     }
 
     &__title {
-    font-size: 14px;
-    line-height: 1.14;
-    text-transform: uppercase;
-    margin-bottom: 10px;
+        text-align: center;
+
+        font-size: 14px;
+        line-height: 1.14;
+        text-transform: uppercase;
+        margin-bottom: 10px;
     }
 }
