--- a/sass/layout/_hero-section.scss
+++ b/sass/layout/_hero-section.scss
@@ -5,7 +5,7 @@
   text-align: center;
   background-color: #2f303a;
 
-  max-width: 1600px;
+//   max-width: 1600px;
   min-height: 600px;
   margin: 0 auto;
 
@@ -19,12 +19,16 @@
     &__title {
         margin: 0 auto 30px;
         font-weight: $f-weight-black;
-        font-size: 44px;
-        line-height: 1.36;
+        font-size: 26px;
+        line-height: 1.62;
         letter-spacing: 0.06em;
         text-transform: uppercase;
-        width: 696px;
+        width: 100%;
         color: #ffffff;
+        
+        // font-size: 44px;
+        // line-height: 1.36;
+
     }
 
     &__button {
