--- a/sass/layout/_team-section.scss
+++ b/sass/layout/_team-section.scss
@@ -9,8 +9,15 @@
 }
 
 .team-list {
-  display: flex;
-  padding: 0;
+   @media screen and (min-width: 768px) and (max-width: 1199px) {
+        flex-basis: calc((100% - 2*15px) / 2);
+        display: flex;
+        flex-wrap: wrap;
+        margin: -15px;
+    }
+    @media screen and (min-width: 1200px) {
+        display: flex;
+    }
 
     &__title {
     font-weight: $f-weight-medium;
@@ -26,17 +33,35 @@
         0px 2px 1px rgba(0, 0, 0, 0.2);
         border-radius: 0px 0px 4px 4px;
             
+        @media  screen and (max-width: 767px ) {
+            &:not(:last-child) {
+                margin-bottom: 30px;
+            }
+        }
+        @media  screen and (min-width: 768px ) and (max-width: 1199px) {
+            margin: 15px;
+        }
+        @media  screen and (min-width: 1200px ) {
             &:not(:last-child) {
                 margin-right: 30px;
             }
+        }
     }
     
     &__img {
     display: flex;
+        @media  screen and (max-width: 767px ) {
+           width: 100%;
+        }
+        @media  screen and (min-width: 768px ) and (max-width: 1199px) {
+            width: 354px;
+        }
     }
+
     &__thumb {
     padding: 30px 0;
     }
+    
     &__text {
     font-size: 16px;
     line-height: 1.18;
