--- a/sass/layout/_work-section.scss
+++ b/sass/layout/_work-section.scss
@@ -3,6 +3,10 @@
     
   text-align: center;
   padding-top: 0;
+
+  @media screen and (max-width: 1200px) {
+        display: none;
+    }
 }
 
 .work-list {
