--- a/sass/utils/_placeholders.scss
+++ b/sass/utils/_placeholders.scss
@@ -1,8 +1,13 @@
 //.section
 
 %section {
-    padding-top: 94px;
-    padding-bottom: 94px;
+    padding-top: 60px;
+    padding-bottom: 60px;
+
+    @media screen and (min-width: 1200px) {
+        padding-top: 94px;
+        padding-bottom: 94px;
+    }
 }
 
 //primary button (modal-btn, hero-btn, footer-btn)
@@ -62,5 +67,7 @@
     font-size: 36px;
     line-height: 1.16;
     text-align: center;
-    margin-bottom: 50px;
+    margin-bottom: 30px;
+    
+    // margin-bottom: 50px;
 }
