--- a/sass/layout/_work-section.scss
+++ b/sass/layout/_work-section.scss
@@ -23,12 +23,15 @@
       position: relative;
         &:not(:last-child) {
             margin-right: 30px;
-        }        
+        } 
     }
 
     &__title {
         @include flex-settings(flex, center, center);
-      
+        position: absolute;
+        bottom: 0;
+        left: 0;
+
         width: 100%;
         height: 70px;
         bottom: 0;
@@ -36,9 +39,9 @@
 
         font-size: 14px;
         line-height: 1.14;
-
         text-transform: uppercase;
-        background: rgba(47, 48, 58, 0.8);
+
+        background-color: rgba(47, 48, 58, 0.8);
         color: #ffffff;
     }
 
@@ -47,5 +50,6 @@
     }
     &__img {
         display: flex;
+        
     }
 }
